--- a/style.css
+++ b/style.css
@@ -2,53 +2,61 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: center;
+    margin: 0;
     height: 100vh;
     background-position: center;
     background-size: cover;
     background-color: rgb(59, 59, 140);
 }
 
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    max-width: 600px;
+}
+
 .game_infos {
     display: flex;
     justify-content: space-between;
+    width: 100%;
     margin-bottom: 20px;
 }
 
 .container {
-    height: 400px;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
+    aspect-ratio: 5 / 4;
     border: solid black;
     cursor: crosshair;
     position: relative;
-    padding: 20px;
-    display: flex;
-    align-items: center;
     background-color: rgb(0, 2, 38);
     box-shadow: 0 0 5px;
     border-radius: 10px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #target {
-    height: 100px;
-    width: 100px;
+    height: 20%;
+    width: 20%;
     position: absolute;
     transition: 0.25s;
-    animation: animateTarget 10s infinite;
 }
 
 button {
     height: 40px;
-    width: 150px;
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-left: 190px;
-    padding: auto;
-    background-color:  rgb(162, 167, 253);
+    width: 100%;
+    max-width: 150px;
+    background-color: rgb(162, 167, 253);
     border-radius: 10px;
     border: black solid;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 @keyframes animateTarget {
