--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ body {
 }
 
 #target {
-    height: 20%;
-    width: 20%;
+    height: 30%; /* 10% pour la taille des cibles */
+    width: 30%;
     position: absolute;
     transition: 0.25s;
     animation: rotateTarget 4s linear infinite, moveTarget 2s ease-in-out infinite;
@@ -84,12 +84,9 @@ button {
 }
 
 @keyframes moveTarget {
-
-    0%,
-    100% {
+    0%, 100% {
         transform: translateY(0);
     }
-
     50% {
         transform: translateY(-10px);
     }
